# libvefs

./: .clang-format  .clang-tidy  .copier-answers.yml  .editorconfig  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CMakeSettings.template.json  LICENSE  NOTICE  README.md  README.rst  binding.gyp  dependencies.yml  package.json  properties.yml  sources.cmake  tsconfig.json  vcpkg-configuration.json  vcpkg.json  vefs.natvis
apps/: CMakeLists.txt  vefs.main.cpp
apps/vefs/cli/: error.cpp  error.hpp  utils.cpp  utils.hpp
apps/vefs/cli/commandlets/: base.cpp  base.hpp  extract.cpp  extract.hpp  extract_all.cpp  extract_all.hpp  extract_personalization.cpp  extract_personalization.hpp  (+4 more)
libs/vefs/: CMakeLists.txt  vefs.natvis
libs/vefs-cli/: CMakeLists.txt
libs/vefs-cli/src/: vefs-cli.cpp
libs/vefs/src/: archive.cpp  archive_file.cpp  archive_file.hpp  archive_file_lookup.cpp  archive_file_lookup.hpp  archive_free_block_list_file.cpp  archive_free_block_list_file.hpp  archive_index_file.cpp  archive_index_file.hpp  archive_internal_file.cpp  archive_internal_file.hpp  blake2.cpp  blake2.hpp  block_manager.hpp  boringssl_aead.hpp  counter.cpp  crypto_provider_boringssl.cpp  crypto_provider_debug.cpp  ct_compare.hpp  disappointment.cpp  filesystem.cpp  kdf.cpp  os_filesystem.cpp  os_filesystem.hpp  os_filesystem_win.cpp  platform.cpp  precompiled.hpp  proto-helper.hpp  raw_archive.cpp  secure_ops.cpp  sysrandom.cpp  thread_pool.cpp  thread_pool_gen.cpp  thread_pool_win32.cpp  tree_walker.cpp  vfile.cpp  vfile.hpp  vfilesystem.cpp  vfilesystem.hpp
libs/vefs/tests/: CMakeLists.txt  allocator-tests.cpp  archive-integration-tests.cpp  archive-sector-allocator-tests.cpp  archive-tests.cpp  archive_file_id_tests.cpp  block_manager-tests.cpp  boost-unit-test.hpp  cache-tests.cpp  cache_clock-tests.cpp  crypto_provider-tests.cpp  disappointment-tests.cpp  io_buffer_manager.test.cpp  libb2_none_blake2b_crypto_provider.cpp  libb2_none_blake2b_crypto_provider.hpp  memfs-tests.cpp  memfs.cpp  memfs.hpp  mocks.hpp  osfilesystem-tests.cpp  raw_archive-tests.cpp  sector_device-tests.cpp  sector_tree_mt-tests.cpp  sector_tree_seq-tests.cpp  span-tests.cpp  streams-tests.cpp  test-utils.cpp  test-utils.hpp  tree_lut-tests.cpp  tree_walker-tests.cpp  vefs-tests.cpp  vfile-tests.cpp  vfilesystem-tests.cpp
src/: CMakeLists.txt  archive.cpp  archive_file.cpp  archive_file.hpp  archive_file_lookup.cpp  archive_file_lookup.hpp  archive_free_block_list_file.cpp  archive_free_block_list_file.hpp  archive_index_file.cpp  archive_index_file.hpp  archive_internal_file.cpp  archive_internal_file.hpp  blake2.cpp  blake2.hpp  boringssl_aead.hpp  counter.cpp  crypto_provider.cpp  crypto_provider_boringssl.cpp  crypto_provider_boringssl.hpp  crypto_provider_debug.cpp  crypto_provider_debug.hpp  ct_compare.hpp  disappointment.cpp  exceptions.cpp  file_sector.cpp  fileformat.proto  filesystem.cpp  kdf.cpp  module.cpp  napi_.hpp  os_filesystem.cpp  os_filesystem.hpp  os_filesystem_linux.cpp  os_filesystem_win.cpp  precompiled.hpp  proto-helper.hpp  raw_archive.cpp  secure_ops.cpp  sysrandom.cpp  sysrandom.hpp  (+4 more)
src/cli/: CMakeLists.txt  vefs-cli.cpp
src/crypto/: ct_compare.hpp
src/detail/: archive_file_id.hpp  archive_tree_allocator.cpp  file_crypto_ctx.hpp  sector_tree_seq.hpp
src/platform/: thread_pool_gen.hpp  thread_pool_win32.cpp
src/vefs/: archive.cpp  config.test.cpp  disappointment.cpp  vfile.cpp  vfile.hpp  vfilesystem.cpp  vfilesystem.hpp
src/vefs/cache/: bloom_filter.cpp  bloom_filter.hpp  cache_mt.cpp  cache_mt.hpp  cache_page.cpp  cache_page.hpp  eviction_policy.cpp  eviction_policy.hpp  lru_policy.hpp  slru_policy.cpp  slru_policy.hpp  spectral_bloom_filter.cpp  spectral_bloom_filter.hpp  w-tinylfu_policy.cpp  w-tinylfu_policy.hpp
src/vefs/crypto/: blake2.cpp  blake2.hpp  boringssl_aead.hpp  cbor_box.cpp  cbor_box.hpp  counter.codec.hpp  counter.cpp  counter.hpp  crypto_provider_boringssl.cpp  crypto_provider_boringssl.hpp  ct_compare.hpp  kdf.cpp  kdf.hpp
src/vefs/detail/: SpookyV2.cpp  archive_file_id.hpp  archive_header.cpp  archive_header.hpp  archive_sector_allocator.cpp  archive_sector_allocator.hpp  archive_tree_allocator.hpp  block_manager.hpp  cache_car.hpp  cache_clock.hpp  cache_page.hpp  cow_tree_allocator_mt.hpp  file_crypto_ctx.cpp  file_crypto_ctx.hpp  file_descriptor.cpp  file_descriptor.hpp  io_buffer_manager.hpp  preallocated_tree_allocator.cpp  preallocated_tree_allocator.hpp  reference_sector_layout.hpp  sector_device.cpp  sector_device.hpp  sector_id.hpp  sector_tree_mt.hpp  sector_tree_seq.hpp  secure_array.codec.hpp  tree_lut.hpp  tree_walker.hpp  uuid.codec.hpp  uuid.cpp  workaround.test.cpp
src/vefs/hash/: hash-std.cpp  hash_algorithm.cpp  spooky_v2.cpp
src/vefs/platform/: platform.cpp  sysrandom.cpp  sysrandom.hpp  thread_pool.cpp  thread_pool_gen.cpp  thread_pool_gen.hpp  thread_pool_win32.hpp  windows-proper.h
src/vefs_tests/: test_utils.hpp
tests/: CMakeLists.txt  allocator-tests.cpp  archive-integration-tests.cpp  archive-sector-allocator-tests.cpp  archive-tests.cpp  archive_file_id_tests.cpp  blob-tests.cpp  block_manager-tests.cpp  boost-unit-test.hpp  cache-tests.cpp  cache_clock-tests.cpp  crypto_provider-tests.cpp  disappointment-tests.cpp  io_buffer_manager.test.cpp  libb2_none_blake2b_crypto_provider.cpp  libb2_none_blake2b_crypto_provider.hpp  memfs.cpp  memfs.hpp  mocks.hpp  raw_archive-tests.cpp  sector_device-tests.cpp  sector_tree_mt-tests.cpp  sector_tree_seq-tests.cpp  span-tests.cpp  test-utils.hpp  tree_lut-tests.cpp  tree_walker-tests.cpp  vefs-tests.cpp  vfile-tests.cpp  vfilesystem-tests.cpp
tests/test_utils/: libb2_none_blake2b_crypto_provider.cpp  mocks.hpp  test-utils.cpp  test-utils.hpp
tests/vefs/cache/: bloom_filter.test.cpp  cache_mt.test.cpp  cache_page.test.cpp  eviction_policy.test.cpp  lru_policy.test.cpp  slru_policy.test.cpp  spectral_bloom_filter.test.cpp  w-tinylfu_policy.test.cpp
tests/vefs/hash/: hash_algorithm.test.cpp  spooky_v2.test.cpp
(+258 files in other folders)
